--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "web3": "^0.18.4",
     "webpack": "^2.7.0",
     "webpack-dev-server": "^2.6.1"
+  },
+  "dependencies": {
+    "chart.js": "^2.6.0"
   }
 }
